--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "liff",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@line/liff": "2.22.4",
+    "gh-pages": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
