--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "name": "liff",
   "version": "0.0.0",
+  "homepage": "https://iineineno03k.github.io/original-specialmove/",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@line/liff": "2.22.4",
     "gh-pages": "^6.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.1.0",
     "vite": "4.5.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
