--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "liff",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "homepage": "https://iineineno03k.github.io/original-specialmove/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -t 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"
   },
   "dependencies": {
     "@line/liff": "2.22.4",
