--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@line/liff": "2.22.4",
+    "@mui/material": "^5.14.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
