--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@line/liff": "2.22.4",
     "@mui/material": "^5.14.14",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
