--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mui/material": "^5.14.14",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.1.0",
