--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@line/liff": "2.22.4",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.14",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
