--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,7 +18,10 @@
     "react-loader-spinner": "^5.4.5"
   },
   "devDependencies": {
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@vitejs/plugin-react": "4.1.0",
+    "typescript": "5.2.2",
     "vite": "4.5.0"
   }
 }
